--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 
 server.port=8085
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-#spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}/test
-#spring.datasource.username=user
-#spring.datasource.password=password
-#
-#spring.jpa.show-sql=true
-#spring.jpa.open-in-view=false
+
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}/test1
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.username=user
+spring.datasource.password=password
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
