--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.iiitb.spe</groupId>
     <artifactId>market_place_v1</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>market_place_v1</name>
     <description>Market Place version 1</description>
 
