--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8085
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}/test1
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.username=root
+spring.datasource.password=qwertyuiop
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
