--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.username=root
 spring.datasource.password=qwertyuiop
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+
+logging.level.root=INFO
+logging.level.com.iiitb.spe.market_place_v1=TRACE
+logging.file.name=/var/log/spring-boot-elk.log
