--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,8 @@ server.port=8085
 
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://mysql-con/test2
-spring.datasource.url=jdbc:mysql://18.188.199.208:3306/test2?createDatabaseIfNotExist=true
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}/test1
+spring.datasource.url=jdbc:mysql://mysql-con/test2
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}/test2
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.username=root
 spring.datasource.password=qwertyuiop
